--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-epub-viewer": "^0.2.0",
+    "react-file-reader": "^1.1.4",
+    "react-pdf": "^6.2.2",
+    "react-reader": "^1.2.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
