--- a/Reader/frontend/package.json
+++ b/Reader/frontend/package.json
@@ -33,7 +33,7 @@
     "react-pdf": "^6.2.2",
     "react-reader": "^1.2.1",
     "react-router-dom": "^6.11.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "stream": "^0.0.2",
     "util": "^0.12.5",
