--- a/Reader/frontend/package.json
+++ b/Reader/frontend/package.json
@@ -35,6 +35,8 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+        "react-icons": "^4.11.0",
+    "text-selection-react": "^1.1.8",
     "stream": "^0.0.2",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4"
