Add deployment instructions

--- a/Dictionary/RootExtracterApp/src/main/resources/application.properties
+++ b/Dictionary/RootExtracterApp/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port= 9876
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=arabicurdu;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=root
 spring.datasource.password=123
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.show-sql=true
@@ -15,9 +15,19 @@ spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.jpa.properties.hibernate.connection.characterEncoding=utf-8
+spring.jpa.properties.hibernate.connection.CharSet=utf-8
+spring.jpa.properties.hibernate.connection.useUnicode=true
+
+server.tomcat.uri-encoding=UTF-8
+
+# HTTP encoding (HttpEncodingProperties)
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
 
 
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
